...
    
    // MARK: - Tab Items
    /// Enum que define los tabs disponibles
    enum TabItem: String, CaseIterable {
        case home = "Home"
        case search = "Search" 
        case library = "Your library"
        
        // MARK: - Icon Names
        /// Nombre del ícono para el estado seleccionado
        var selectedIcon: String {
            switch self {
            case .home:
...
